# pytorch-3dunet

./: .gitignore  setup.cfg
pytorch3dunet/: predict.py
pytorch3dunet/datasets/: dsb.py  hdf5.py  memory.py  utils.py
pytorch3dunet/unet3d/: config.py  losses.py  metrics.py  predictor.py
tests/: conftest.py  test_dataset.py  test_predictor.py
tests/resources/: config_test.yml
