[metadata]
name = pytorch3dunet
version = 1.3.3
author = Adrian Wolny, Lorenzo Cerrone, Fork: Leopold Franz
url = https://github.com/kevinyamauchi/pytorch-3dunet/tree/memory_dataset
license = MIT
description = This repo contains a pytorch version of 3D UNet. This fork containing the possibility for in-memory datasets.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/pytorch-3dunet/issues
    Documentation = https://github.com/kevinyamauchi/pytorch-3dunet#README.md
    Source Code = https://github.com/kevinyamauchi/pytorch-3dunet
    User Support = https://github.com/kevinyamauchi/pytorch-3dunet/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    pytorch
    torchvision
    tensorboardx
    h5py
    scipy
    scikit-image
    scikit-learn
    pyyaml
    hdbscan



[options.extras_require]
dev =
    pytest
